# System-Software-Assignment2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  IntranetFileTransfer  IntranetFileTransfer.cbp  IntranetFileTransferClient  Makefile  cmake_install.cmake  ift
client/: main.c
server/: connection_handler.h  daemonize.h  main.c
